--- a/KotlinProject1/app/src/main/res/layout/main_layout_fragment.xml
+++ b/KotlinProject1/app/src/main/res/layout/main_layout_fragment.xml
@@ -6,12 +6,13 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/contactViewBtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:onClick="onClick"
         android:text="Button1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
