--- a/KotlinProject1/app/src/main/res/layout/contactview_activity_layout.xml
+++ b/KotlinProject1/app/src/main/res/layout/contactview_activity_layout.xml
@@ -4,16 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.SearchView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycleView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <zhaoh.com.kotlin.mykotlinproject.cityview.MyGridView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </ScrollView>
+        android:layout_height="match_parent" />
 </LinearLayout>
